--- a/style.css
+++ b/style.css
@@ -1,99 +1,182 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    margin: 0;
+    background-color: rgb(255, 231, 210);
 }
-
-.container {
-    height: 100vh;
-    overflow-y: auto;
-    scroll-snap-type: y mandatory;
-}
-
 .slide {
     height: 100vh;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+}
+
+.slides {
     scroll-snap-align: start;
+    height: 100vh;
 }
 
 .slide1 {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    background: url("https://png.pngtree.com/background/20250110/original/pngtree-sportswear-and-black-sneakers-with-laces-picture-image_15565143.jpg")
-    center / cover no-repeat;
+    grid-template-rows: repeat(10, 1fr);
 }
 
-.slide2 {
-    background-color: royalblue;
+.navbar {
+    grid-column: 5 / 7;
+    grid-row: 0 / 2;
+    display: flex;
+    gap: 20px;
+    transform: translateX(-10px);
+    transform: translateY(-10px);
 }
 
-.slide3 {
-    background-color: goldenrod;
-}
-
-.nav {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 40px;
-    padding: 30px 20px;
-}
-
-.navleft {
-    grid-column: 2;
-    grid-row: 1;
-    justify-content: start;
-    align-items: start;
-}
-
-.navright {
+.signbtn {
     grid-column: 10;
     grid-row: 1;
-    justify-content: end;
-    align-items: start;
+    transform: translateX(20px);
+    background-color: rgb(36, 36, 36);
+    color: white;
+    text-align: center;
+    width: 100px;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
-.link {
-    color: #fff;
+header {
+    grid-row: 1;
+    grid-column: 1;
+    transform: translateX(60px);
+}
+header a {
     text-decoration: none;
-    font-size: 1.2rem;
-    background-color: #E62C5F;
-    width: 110px;
-    text-align: center;
-    align-content: center;
-    height: 35px;
-    border-radius: 10px;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    font-size: 1.5em;
+}
+header p {
+    padding-left: 5px;
+    transform: translateY(-15px);
 }
 
-.shop-name {
-    grid-column: 5;
+.slide1 {
+    align-items: center;
+}
+
+.links {
+    text-decoration: none;
+    color: #000;
+    font-size: 1.3em;
+    padding: 5px;
+    border-radius: 15px;
+    transition: color 0.3s ease;
+}
+
+.links:hover {
+    color: white;
+    background-color: #000;
+}
+
+.midtext {
     grid-row: 2;
-    display: grid;
-    place-items: center;
-    user-select: none;
-    position: relative;
-    top: -20%;
-    left: -3%;
+    grid-column: 4/ 9;
+    font-size: 4em;
+    transform: translateY(-60px);
+}
+.minitext > p {
+    color: rgb(42, 38, 60);
+}
+.minitext {
+    grid-row: 3;
+    grid-column: 3 / 8;
+    font-size: 1.8em;
+    transform: translateY(-120px);
+}
+#img1 {
+    grid-column: 4 / 8;
+    grid-row: 3 / 9;
+    justify-self: center;
+    align-self: center;
+    max-width: 100%;
+    width: 400px;
+    max-width: 1000px;
+    height: auto;
+    transform:rotateX(14deg) rotateY(21deg) rotateZ(-15deg) translateX(-50px);
+    border: 3px solid white;
+    border-radius: 20px;
+    z-index: 1;
+    scale: 1.1;
 }
 
-.shop-name h1 {
-    margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 200px;
-    color: #fff;
-    text-shadow: 2px 2px 10px rgba(0, 128, 255, 0.482), -2px -2px 10px rgba(255, 0, 0, 0.437);
+#img2 {
+    grid-column: 7 / 10;
+    grid-row: 3 / 9;
+    justify-self: center;
+    align-self: center;
+    max-width: 100%;
+    width: 400px;
+    height: auto;
+    transform: rotateX(19deg) rotateY(-19deg) translate(-100px, -50px);
+    border: 3px solid white;
+    border-radius: 20px;
+    scale: 0.7;
+    z-index: 2;
 }
 
-.shop-name h2 {
-    margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 100px;
-    color: transparent;
-    -webkit-text-stroke: 5px white;
+#img3 {
+    grid-column: 0 / 10;
+    grid-row: 3 / 9;
+    justify-self: center;
+    align-self: center;
+    max-width: 100%;
+    width: 300px;
+    max-width: 1000px;
+    height: auto;
+    transform: translate(140px, 30px) scaleZ(1.6) rotateX(14deg) rotateY(-32deg) rotateZ(18deg);
+    border: 3px solid white;
+    border-radius: 20px;
+    scale: 0.9;
 }
-
-/* .navright a {
-    background-color: #E62C5F;
-    width: 110px;
-    text-align: center;
-    align-content: center;
-    height: 35px;
-    border-radius: 10px;
+/* 
+.slide1 > * {
+    outline: 1px dashed red;
 } */
+
+.icons {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+#icon1 {
+    grid-row: 3;
+    grid-column: 1;
+    transform: translateX(40px);
+}
+
+#icon2 {
+    grid-row: 3;
+    grid-column: 1/2;
+    transform: translateX(80px);
+}
+
+#icon3 {
+    grid-row: 3;
+    grid-column: 1/2;
+    transform: translateX(120px);
+}
+
+#review {
+    grid-row: 4;
+    grid-column: 1;
+    transform: translate(70px, -35px);
+}
+
+#review > a {
+        color: black;
+    text-decoration: underline;
+}
