--- a/style.css
+++ b/style.css
@@ -1,47 +1,23 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background-color: rgb(255, 231, 210);
-}
-.slide {
+.slidecontainer {
     height: 100vh;
     overflow: auto;
     scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
 }
 
 .slides {
-    scroll-snap-align: start;
     height: 100vh;
+    scroll-snap-align: start;
+    background-color: peachpuff;
 }
 
 .slide1 {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
-}
-
-.navbar {
-    grid-column: 5 / 7;
-    grid-row: 0 / 2;
-    display: flex;
-    gap: 20px;
-    transform: translateX(-10px);
-    transform: translateY(-10px);
-}
-
-.signbtn {
-    grid-column: 10;
-    grid-row: 1;
-    transform: translateX(20px);
-    background-color: rgb(36, 36, 36);
-    color: white;
-    text-align: center;
-    width: 100px;
-    border-radius: 20px;
-    cursor: pointer;
 }
 
 header {
@@ -62,138 +38,49 @@ header p {
     transform: translateY(-15px);
 }
 
-.slide1 {
-    align-items: center;
+#signbtn {
+    grid-row: 1;
+    grid-column: 9;
+}
+.icons {
+    width: 48px;
+    height: auto;
+}
+.images {
+    width: 200px;
+    height: auto;
+}
+
+.header1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.header2 {
+    grid-column: 5 / 7;
+    grid-row: 2 / 5;
+}
+
+.header3 {
+    grid-column: 5 / 7;
+    grid-row: 3 / 5;
+}
+
+nav {
+    grid-column: 5;
+    grid-row: 1;
 }
 
 .links {
-    text-decoration: none;
-    color: #000;
-    font-size: 1.3em;
-    padding: 5px;
-    border-radius: 15px;
-    transition: color 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;      
 }
 
-.links:hover {
-    color: white;
-    background-color: #000;
+.iconcontainer , .imgcontainer {
+    position: absolute;
+    opacity: 0;
 }
-
-.midtext {
-    grid-row: 2;
-    grid-column: 4/ 9;
-    font-size: 4em;
-    transform: translateY(-60px);
-}
-.minitext > p {
-    color: rgb(42, 38, 60);
-}
-.minitext {
-    grid-row: 3;
-    grid-column: 3 / 8;
-    font-size: 1.8em;
-    transform: translateY(-120px);
-}
-#img1 {
-    grid-column: 4 / 8;
-    grid-row: 3 / 9;
-    justify-self: center;
-    align-self: center;
-    max-width: 100%;
-    width: 400px;
-    max-width: 1000px;
-    height: auto;
-    transform:rotateX(14deg) rotateY(21deg) rotateZ(-15deg) translateX(-50px);
-    border: 3px solid white;
-    border-radius: 20px;
-    z-index: 1;
-    scale: 1.1;
-}
-
-#img2 {
-    grid-column: 7 / 10;
-    grid-row: 3 / 9;
-    justify-self: center;
-    align-self: center;
-    max-width: 100%;
-    width: 400px;
-    height: auto;
-    transform: rotateX(19deg) rotateY(-19deg) translate(-100px, -50px);
-    border: 3px solid white;
-    border-radius: 20px;
-    scale: 0.7;
-    z-index: 2;
-}
-
-#img3 {
-    grid-column: 0 / 10;
-    grid-row: 3 / 9;
-    justify-self: center;
-    align-self: center;
-    max-width: 100%;
-    width: 300px;
-    max-width: 1000px;
-    height: auto;
-    transform: translate(140px, 30px) scaleZ(1.6) rotateX(14deg) rotateY(-32deg) rotateZ(18deg);
-    border: 3px solid white;
-    border-radius: 20px;
-    scale: 0.9;
-}
-/* 
 .slide1 > * {
-    outline: 1px dashed red;
-} */
-
-.icons {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-#icon1 {
-    grid-row: 3;
-    grid-column: 1;
-    transform: translateX(40px);
-}
-
-#icon2 {
-    grid-row: 3;
-    grid-column: 1/2;
-    transform: translateX(80px);
-}
-
-#icon3 {
-    grid-row: 3;
-    grid-column: 1/2;
-    transform: translateX(120px);
-}
-
-#review {
-    grid-row: 4;
-    grid-column: 1;
-    transform: translate(70px, -35px);
-}
-
-#review > a {
-        color: black;
-    text-decoration: underline;
-}
-
-#img1:hover,
-#img2:hover {
-    transition-duration: 1s;
-    transform:translate3d(0, 0, 60px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.15);
-    box-shadow:0 30px 60px rgba(0, 0, 0, 0.35),0 0 0 2px rgba(255, 255, 255, 0.3);
-    z-index: 10;
-    filter: brightness(1.05) contrast(1.05);
-}
-
-#img3:hover {
-    transition-duration: 1s;
-    transform: translate3d(200px, 0, 30px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.15);
-    box-shadow:0 30px 60px rgba(0, 0, 0, 0.35),0 0 0 2px rgba(255, 255, 255, 0.3);
-    z-index: 10;
-    filter: brightness(1.05) contrast(1.05);
+    outline: 5px dotted red;
 }
